--- a/app/src/main/main/AndroidManifest.xml
+++ b/app/src/main/main/AndroidManifest.xml
@@ -11,13 +11,20 @@
         android:theme="@style/Theme.Quiz.First">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="plain/text" />
+        </intent>
+    </queries>
 </manifest>
